  * set search results lifetime to 20 minutes instead of just 5
  * restart a search only if there are no valid results or more
    than half of the search results lifetime has expired.
  * export peers not only at program exit, but every 24 hours
  * listen for local peer discovery packets on DHT interface (--ifce)
  * increase maximum number of exported good peers to 150

 -- mwarning <moritzwarning@web.de>  Sun, 18 May 2014 16:51:22 +0200

kadnode (0.9) unstable; urgency=low

  * fix local peer discovery on MacOSX
  * update DHT to dht-0.22
  * fix crash when adding value IDs at program start
  * improve some messages

 -- mwarning <moritzwarning@web.de>  Wed, 07 May 2014 15:22:26 +0200

kadnode (0.8) unstable; urgency=low

  * fix segfault in the key handling routines
  * static linking for libsodium
  * check for duplicate options,
    except --verbosity and options without arguments
  * add support for Mac OSX
  * fix OpenWrt init script

 -- mwarning <moritzwarning@web.de>  Thu, 06 Mar 2014 01:14:54 +0100

kadnode (0.7) unstable; urgency=low

  * add support for domain specific secret/public keys using
    --auth-add-skey / --auth-add-pkey options and wild card matching
  * limit list command to local console for security reasons
  * do not ignore every top level domain when
    computing an identifier, only .p2p
  * collect addresses when a search has finished,
    do not wait for another nodes reply
  * also search locally stored own and foreign announcements,
    useful for very small networks and faster lookup
  * quiet startup in daemon mode

 -- mwarning <moritzwarning@web.de>  Mon, 03 Mar 2014 02:45:29 +0100

kadnode (0.6) unstable; urgency=low

  * remove "shutdown" command from KadNode console
  * wait for announcements until at least one other node is known
  * support return of multiple answers via NSS
  * fix infinite loop in value list

 -- mwarning <moritzwarning@web.de>  Thu, 13 Feb 2014 15:29:11 +0100

kadnode (0.5) unstable; urgency=low
